# greedy

./: .CMakeLists.txt.un~  .gitignore  .gitmodules  CMakeLists.txt  CTestConfig.cmake  Config.cmake.in  README.md  pyproject.toml
.github/: compile.yml
.github/workflows/: compile.yml  prebuild.sh
CMake/: GitBranch.cmake  Package.cmake
docs/: index.rst  install.rst  quick_start.rst  reference.rst
docs/usage/: stackg_usage_init.txt  stackg_usage_main.txt  stackg_usage_recon.txt  stackg_usage_splat.txt  stackg_usage_voladd.txt  stackg_usage_voliter.txt  stackg_usage_volmatch.txt
matlab/: .diff.swp
matlab/diff/: diff_objective.m  diff_objective_gateux_deriv.m  diff_objective_simple.m  diffopmat.m  diffopt.m  diffplot.m  elcallback.m  elevolve.m  elupdate.m  expmap.m  expmap_euler.m  expmap_gateaux_deriv.m  expmap_semi_lagrange.m  gridplot.m  image_downsample.m  image_upsample.m  lddmm_compose_diffeomorphisms.m  lddmm_example_cee_to_circ.m  lddmm_hilbert_dot_product.m  lddmm_init.m  lddmm_integrate_field_and_jacobian_semi_lagrangian.m  lddmm_integrate_field_euler.m  lddmm_integrate_field_semi_lagrangian.m  lddmm_jacobian_determinant.m  lddmm_objective_and_gateaux.m  lddmm_objective_and_gradient.m  lddmm_optimize.m  lddmm_optimize_lbgfs.m  lddmm_plot_field.m  lddmm_plot_greens_function.m  lddmm_plot_problem.asv  lddmm_plot_problem.m  lddmm_plot_problem_simple.m  lddmm_plot_problem_simple.m~  lddmm_random_field.m  lddmm_reparameterize_vector_field.m  lddmm_resample_in_time.m  lddmm_test_gradient.m  lddmm_test_inverse_consistency.m  lddmm_vector_field_dot_product.m  (+8 more)
matlab/diff/depthmap/: depthmap.m  runme.m
matlab/diff/results/: c_to_o_iteration_8.eps  oh_to_cee_example.eps  oh_to_cee_example_more_timesteps.eps
matlab/ncc_test/: compute_ncc.m  compute_wncc.m  ncc_test_feb2021.m  weighted_ncc_test_feb2021.m
scripts/template/: greedy_build_template.sh  pybatch.sh
src/: .SimpleWarpImageFilter.h.un~  .SimpleWarpImageFilter.txx.un~  .greedy_main.cxx.un~  .lddmm_data.cxx.un~  .lddmm_data.h.un~  AffineCostFunctions.cxx  AffineCostFunctions.h  AffineTransformUtilities.h  CommandLineHelper.cxx  CommandLineHelper.h  DifferentiableScalingAndSquaring.cxx  DifferentiableScalingAndSquaring.h  FastLinearInterpolator.h  FastWarpCompositeImageFilter.h  FastWarpCompositeImageFilter.txx  GreedyAPI.cxx  GreedyAPI.h  GreedyException.h  GreedyMeshIO.cxx  GreedyMeshIO.h  GreedyParameters.cxx  GreedyParameters.h  GreedyVersion.cxx.in  ImageRegionConstIteratorWithIndexOverride.h  JacobianDeterminantImageFilter.txx  LinearTransformToWarpFilter.h  LinearTransformToWarpFilter.txx  MultiComponentApproximateNCCImageMetric.txx  MultiComponentImageMetricBase.h  MultiComponentImageMetricBase.txx  MultiComponentMutualInfoImageMetric.h  MultiComponentMutualInfoImageMetric.txx  MultiComponentNCCImageMetric.h  MultiComponentNCCImageMetric.txx  MultiImageAffineMSDMetricFilter.h  MultiImageAffineMSDMetricFilter.txx  MultiImageOpticalFlowImageFilter.h  MultiImageOpticalFlowImageFilter.txx  MultiImageRegistrationHelper.cxx  MultiImageRegistrationHelper.h  (+19 more)
src/ITKFilters/include/: CompositeImageNanMaskingFilter.h  CompositeImageNanMaskingFilter.txx  FastLinearInterpolator.h  FastWarpCompositeImageFilter.h  FastWarpCompositeImageFilter.txx  JacobianDeterminantImageFilter.h  JacobianDeterminantImageFilter.txx  LieBracketFilter.h  LieBracketFilter.hxx  LinearTransformToWarpFilter.h  LinearTransformToWarpFilter.txx  MahalanobisDistanceToTargetWarpMetric.h  MahalanobisDistanceToTargetWarpMetric.txx  MultiComponentApproximateNCCImageMetric.h  MultiComponentApproximateNCCImageMetric.txx  MultiComponentImageMetricBase.h  MultiComponentImageMetricBase.txx  MultiComponentMetricReport.h  MultiComponentMutualInfoImageMetric.h  MultiComponentMutualInfoImageMetric.txx  MultiComponentNCCImageMetric.h  MultiComponentNCCImageMetric.txx  MultiComponentQuantileBasedNormalizationFilter.h  MultiComponentQuantileBasedNormalizationFilter.txx  MultiComponentUnweightedNCCImageMetric.h  MultiComponentUnweightedNCCImageMetric.txx  MultiComponentWeightedNCCImageMetric.h  MultiComponentWeightedNCCImageMetric.txx  MultiImageOpticalFlowImageFilter.h  MultiImageOpticalFlowImageFilter.txx  OneDimensionalInPlaceAccumulateFilter.h  OneDimensionalInPlaceAccumulateFilter.txx  itkSLICSuperVoxelImageFilter.h  itkSLICSuperVoxelImageFilter.hxx
src/SparseSolvers/: CMakeLists.txt  MKLSolverInterface.cxx  MKLSolverInterface.h  PardisoInterface.cxx  PardisoInterface.h  SparseMatrix.cxx  SparseMatrix.h  SparseMatrix.txx  SparseSolver.cxx  SparseSolver.h  SparseSolverException.h  TaucsInterface.cxx  TaucsInterface.h
src/lmshoot/: PointSetGeodesicFlowUtil.cxx  PointSetGeodesicShooting.cxx  PointSetGeodesicShooting.h  PointSetGeodesicToWarp.cxx  PointSetGeodesicToWarp.h  PointSetHamiltonianSystem.cxx  PointSetHamiltonianSystem.h  PointSetOptimalControlSystem.cxx  PointSetOptimalControlSystem.h  TestGeodesicShooting.cxx  VTKArrays.h  lmshoot_main.cxx  lmtowarp_main.cxx
src/multichunk/: MultiChunkGreedy.cxx  MultiChunkGreedy.h  multichunk_greedy_main.cxx
src/propagation/: CMakeLists.txt  PropagationAPI.cxx  PropagationAPI.h  PropagationCommon.h  PropagationCommon.hxx  PropagationData.h  PropagationData.hxx  PropagationData.txx  PropagationIO.cxx  PropagationIO.h  PropagationInputBuilder.cxx  PropagationInputBuilder.h  PropagationParameters.cxx  PropagationParameters.h  PropagationParameters.hxx  PropagationTools.h  PropagationTools.txx  greedy_propagation.cxx  greedy_propagation.md  main.cxx
src/wrapping/: CMakeLists.txt  GreedyPythonBindings.cxx  pyproject.toml
testing/data/: circle_nzbkg_init.mat  phantom01_readme.txt  phantom01_rigid.mat  runpair.sh  t1longi_2d_rigid.mat  t1longi_2d_rigid_halfway.mat
testing/data/lmshoot/: shoot_regression.mat  shooting_test_2d_target.vtk  shooting_test_2d_template.vtk  shooting_test_3d_box.vtk  shooting_test_3d_sphere.vtk  shooting_test_3d_sphere_reduced.vtk
testing/src/: GreedyTestDriver.cxx  TestOneDimensionalInPlaceAccumulateFilter.cxx  greedy_multi_chunk.cxx
utilities/: hexdump.c
(+3 files in other folders)
